src/components/WebexMember/WebexMember.scss
.#{$WEBEX_COMPONENTS_CLASS_PREFIX}-member {
  display: flex;
  align-items: center;
  color: var(--wxc-text-color);

  .avatar {
    height: 2rem;
    width: 2rem;
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
  }

  .details {
    flex: 1;
    min-width: 0;
    margin-left: 0.75rem;
  }

  .name {
    @include body-fonts;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    margin-top: 0.063rem;

    .guest {
      color: $wxc-gray-70;
    }
  }

  .roles {
    font-size: 0.875rem;
    line-height: 1rem;
    color: var(--wxc-secondary-text-color);
  }

  .organization {
    font-size: 0.875rem;
    line-height: 1rem;
    color: var(--wxc-warning-color);
  }

  .sharing {
    margin-right: 2.5rem;
  }

  .speaking {
    color: var(--wxc-speaking-color);
  }

  .muted {
    color: var(--wxc-muted-color);
  }
}

